--- a/www/templates/homeWifi9792Created.html
+++ b/www/templates/homeWifi9792Created.html
@@ -4,6 +4,6 @@
         <div>
             <p>HomeWifi9792 is now available. You’re now online.</p>
         </div>
-        <button id="homeWifi9792Created-button5" class="button button-positive  button-block">Start using the app</button>
+        <button id="homeWifi9792Created-button5" class="button button-positive button-block button-bottom">Start using the app</button>
     </ion-content>
 </ion-view>
